--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,5 @@
   </head>
   <body>
     <h3>Welcome to webpack</h3>
-  <script type="text/javascript" src="js/vendors.js"></script><script type="text/javascript" src="js/app.js"></script></body>
+  </body>
 </html>
